<resources>

    <string name="app_name">Local Coffee Shop</string>
    <string name="itemID">Item ID</string>
    <string name="itemName">Item Name</string>
    <string name="itemPrice">Item Price</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="local_coffee_shop">Local Coffee Shop</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_my_password">Remember my password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="lcs_image">lcs image</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="action_login">login</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="back_button">back button</string>
    <string name="back">Back</string>
    <string name="title_activity_maps">Map</string>
    <string name="address">2500 N River Rd,  \nHooksett, NH 03106</string>
    <string name="directions">Get Directions</string>
    <string name="map_marker_image">map marker image</string>
    <string name="phone_image">phone_image</string>
    <string name="phonenumber">Phone Number: 800-668-1249</string>
    <string name="email_address_image">email address image</string>
    <string name="lcs_coffeeshop_com">lcs@coffeeshop.com</string>
    <string name="twitter_image">twitter image</string>
    <string name="twittertext">Check us out on Twitter!</string>


    <string name="CONSUMER_KEY">CONSUMERKEY</string>
    <string name="CONSUMER_SECRET">CONSUMERSECRET</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="change_password">Change password</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add item</string>
    <string name="cart">Cart</string>
    <string name="remove_item">Remove</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="about_prompt">The Local Coffee Shop was founded by students here at SNHU. We strive to make the best products for our fellow students to give them the boost they need for their day. We hope to bring smiles to student\'s faces when they visit our coffee shop because we know just how hard classes can be.</string>
    <string name="about">About</string>
    <string name="submit_order">Submit Order</string>
    <string name="no_orders_placed">No orders placed</string>
    <string name="total">Total:</string>

</resources>

