<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#aaaaaa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_coffee_shop"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/lcs_512x512"
            android:contentDescription="@string/local_coffee_shop"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#ffffff"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffffff"
                android:hint="@string/enter_your_username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#ffffff"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffffff"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/forgotPassword_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="#b79675"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:onClick="onClick" />

        <Button
            android:id="@+id/signUp_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="#b79675"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:onClick="onClick" />

    </LinearLayout>

</ScrollView>