<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#aaaaaa"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <!--- Name and Icon -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_coffee_shop"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/local_coffee_shop"
            android:src="@drawable/lcs_512x512" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@drawable/rectangle_background">

            <!--- Map Marker Icon and Address -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/map_markerImage"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/map_marker_image"
                    app:srcCompat="@drawable/icon_map_marker" />

                <TextView
                    android:id="@+id/addressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/address"
                    android:textColor="#000000"
                    android:textSize="22sp" />
            </TableRow>

            <!--- Get Directions Button -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/directions_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="#b79675"
                    android:onClick="onClick"
                    android:text="@string/directions"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </TableRow>

            <!--- Phone icon and Phone number -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/phoneImage"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/phone_image"
                    app:srcCompat="@drawable/icon_phone" />

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/phonenumber"
                    android:textColor="#000000"
                    android:textSize="22sp" />
            </TableRow>

            <!--- Email icon and email address -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/emailImage"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/email_address_image"
                    app:srcCompat="@drawable/icon_envelope" />

                <TextView
                    android:id="@+id/emailaddressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/lcs_coffeeshop_com"
                    android:textColor="#000000"
                    android:textSize="22sp" />
            </TableRow>

            <!--- Twitter Icon and future twitter link -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/checktwitter_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:background="#b79675"
                    android:drawableLeft="@drawable/icon_twitter32"
                    android:gravity="left|center_vertical"
                    android:text="Check us out on Twitter!"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="19sp"
                    android:onClick="onClick"/>

            </TableRow>

        </LinearLayout>

    </LinearLayout>

</ScrollView>