<?xml version="1.0" encoding="utf-8"?>
<!---
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</android.support.constraint.ConstraintLayout>
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="#aaaaaa">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--- Name and Icon -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_coffee_shop"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/lcs_512x512"
            android:contentDescription="@string/local_coffee_shop"/>

        <!--- Full Name -->
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-80dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <!--- Email -->
        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-95dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-5dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <!--- Password -->
        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-80dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-5dp"
            android:ems="10"
            android:inputType="textPassword" />

        <!-- Create Account/Login Button -->
        <Button
            android:id="@+id/createAccount_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="24dp"
            android:background="#b79675"
            android:padding="12dp"
            android:text="Create Account"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/already_a_member_login"
            android:gravity="center"
            android:textSize="16sp"
            android:onClick="onClick" />

    </LinearLayout>
</ScrollView>