<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#aaaaaa"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <!--- Name and Icon -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/local_coffee_shop"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/local_coffee_shop"
            android:src="@drawable/lcs_512x512" />

        <!--- Full Name -->
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-80dp"
            android:layout_marginTop="10dp"
            android:text="@string/full_name"/>

        <EditText
            android:id="@+id/userfullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-5dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="none" />

        <!--- Email -->
        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-95dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-5dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="none" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#ffffff"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/currentUserPassword_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffffff"
                android:hint="@string/enter_current_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#aaaaaa"
                android:textSize="18sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#ffffff"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/newUserPassword_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffffff"
                android:hint="@string/enter_a_new_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#aaaaaa"
                android:textSize="18sp" />

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/newPassword_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="24dp"
            android:background="#b79675"
            android:padding="18sp"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:onClick="onClick" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="24dp"
            android:background="#b79675"
            android:padding="18sp"
            android:text="Logout"
            android:textAllCaps="false"
            android:onClick="onClick" />

    </LinearLayout>

</ScrollView>